# proxy-attention-lab

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CMakeLists.txt  README.md  pyproject.toml  ruff.toml  run.sh  test_debug_buffers.py
.benchmarks/: py_all_test_paged_attention_python_20250517_094123.json  results.json
.github/workflows/: tests.yml
benchmarks/: README.md  __init__.py  benchmarks.md
benchmarks/analyzer/: __init__.py  __main__.py  config.py  loaders.py  plot_utils.py  reporters.py  transformers.py
benchmarks/analyzer/core/: __init__.py  data_loader.py  plot_styles.py  registry.py  types.py
benchmarks/analyzer/plotters/: __init__.py  base.py  batch_decode_latency.py  batch_prefill_latency.py  fill_kv_pages.py  latency_vs_effective_items.py  latency_vs_head_dim.py  latency_vs_seq_len.py  model_configs_latency.py
benchmarks/fill_kv_pages/python/: test_fill_kv_pages_python.py
benchmarks/paged_attention/cpp/: CMakeLists.txt  batch_latency_vs_num_sequences.cpp  seq_len_vs_latency.cpp  test_paged_attention_cpp.cpp
benchmarks/paged_attention/python/: test_paged_attention_python.py
benchmarks/python/: pal_benchmark_latency.py  pal_benchmark_seq_len.py
lab/proxy_attention_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lab/tests/: test_smoke.py
scripts/: analyze_benchmarks.py  benchmarks.sh  build_metal.sh  profile.sh  run.sh  watch.sh
scripts/benchmark_analyzer/: __init__.py  __main__.py  config.py  loaders.py  plot_utils.py  reporters.py  transformers.py
scripts/benchmark_analyzer/plotters/: __init__.py  latency_vs_effective_items.py  latency_vs_head_dim.py  latency_vs_seq_len.py  model_configs_latency.py
src/cpp/: CMakeLists.txt  binding.cpp
src/cpp/ops/: ops.cpp  ops.hpp
src/cpp/paged_attention/: paged_attention_primitive.cpp  paged_attention_primitive.hpp
src/pal_core/: CMakeLists.txt  README.md  binding.cpp  bindings.cpp
src/pal_core/include/: metal_loader.hpp  ops.hpp  paged_attention.h  paged_attention_primitive.hpp
src/pal_core/include/kernels/: paged_attention_types.h
src/pal_core/include/pal_core/: constants.hpp  fill_kv_pages_primitive.hpp  kernel_constants.hpp  metal_loader.hpp  ops.hpp  paged_attention_decode_primitive.hpp  paged_attention_prefill_primitive.hpp  paged_attention_primitive.hpp  primitive_factory.hpp  types.hpp
src/pal_core/include/pal_core/debug/: kernel_debug.hpp
src/pal_core/include/pal_core/kernel_utils/: kernel_constants.hpp  memory_layout.hpp  param_builder.hpp  tiling.hpp  validation.hpp
src/pal_core/include/pal_core/metal/: dispatch.hpp  metal_loader.hpp
src/pal_core/include/shaders/: paged_attention_types.h
src/pal_core/kernels/: paged_attention.h.metal  paged_attention.metal  paged_attention_decoding.metal  paged_attention_prefill.metal  paged_attn_prefill_pass2.metal
src/pal_core/kernels/metal/: metal_types.h.metal
src/pal_core/kernels/paged_attention/: fill_kv_pages.h.metal  fill_kv_pages.metal  paged_attention.h.metal  paged_attention_2pass.h.metal  paged_attention_2pass.metal  paged_attention_decoding.metal  paged_attention_fused.h.metal  paged_attention_fused.metal  paged_attention_kernels.metal  paged_attention_prefill.metal  paged_attn_prefill_pass2.metal  paged_reduce.h.metal  pal_types.h.metal  utils.h.metal
src/pal_core/kernels/paged_attention/decode/: paged_attention_decode.h.metal  paged_reduce_decode.h.metal
src/pal_core/kernels/paged_attention/prefill/: paged_attention_prefill.h.metal
src/pal_core/ops/: ops.cpp
src/pal_core/paged_attention/: paged_attention.h  paged_attention.metal  paged_attention_primitive.cpp  paged_attention_primitive.hpp
src/pal_core/src/: fill_kv_pages_primitive.cpp  metal_loader_posix.cpp  ops.cpp  paged_attention.metal  paged_attention_decode_primitive.cpp  paged_attention_prefill_primitive.cpp  paged_attention_primitive.cpp  primitive_factory.cpp
src/pal_core/src/debug/: kernel_debug.cpp
src/pal_core/src/kernel_utils/: memory_layout.cpp  validation.cpp
src/pal_core/src/kernels/: paged_attention_primitive.cpp
src/pal_core/src/kernels/paged_attention/: paged_attention_primitive.cpp
src/pal_core/src/metal/: dispatch.cpp  metal_loader_posix.cpp
src/proxy_attention_lab/: README.md  __init__.py  ops.py
src/python/: __init__.py  ops.py
tests/: README.md  __init__.py  conftest.py  test_smoke.py
tests/fill_kv_pages/: test_smoke.py
tests/paged_attention/: __init__.py  test_attention_scenarios.py  test_basic_paged_attention.py  test_core_functionality.py  test_determinism.py  test_error_handling.py  test_full_attention.py  test_gqa_mqa.py  test_sdpa_equivalency.py  test_smoke.py  test_softmax_and_value.py
tests/paged_attention/benchmarks/cpp/: CMakeLists.txt  paged_attention_benchmarks.cpp  pal_op_benchmarks.cpp  test_paged_attention_cpp.cpp
tests/paged_attention/decode/: test_attention_scenarios.py  test_core_functionality.py  test_decode_smoke.py  test_determinism.py  test_error_handling.py  test_full_attention.py  test_gqa_mqa.py  test_sdpa_equivalency.py  test_smoke.py  test_softmax_and_value.py
tests/paged_attention/fill_kv_pages/: test_fill_chunk_across_page_boundary.py  test_fill_kv_pages_data.py  test_fill_multiple_tokens_single_sequence.py  test_fill_single_token_multiple_sequences.py  test_smoke.py
tests/paged_attention/fused/: test_attention_scenarios.py  test_core_functionality.py  test_determinism.py  test_full_attention.py  test_gqa_mqa.py  test_sdpa_equivalency.py  test_smoke.py  test_softmax_and_value.py
tests/paged_attention/prefill/: test_attention_scenarios.py  test_core_functionality.py  test_determinism.py  test_full_attention.py  test_gqa_mqa.py  test_paint.py  test_prefill_smoke.py  test_sdpa_equivalency.py  test_smoke.py  test_softmax_and_value.py
tests/paged_attention/two_pass/: test_attention_scenarios.py  test_core_functionality.py  test_determinism.py  test_full_attention.py  test_gqa_mqa.py  test_sdpa_equivalency.py  test_smoke.py
tests/paged_attention/unit_tests/: test_gqa_mqa.py  test_sdpa_equivalency.py
tests/python/: test_smoke.py
(+3 files in other folders)
