cmake_minimum_required(VERSION 3.20)
project(proxy_attention_lab LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_program(CCACHE_PROGRAM ccache)
if (CCACHE_PROGRAM)
  set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
  set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
  if (APPLE)
    set(CMAKE_OBJC_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
  endif()
endif()

if(APPLE)
  set(CMAKE_BUILD_PARALLEL_LEVEL $(sysctl -n hw.physicalcpu))
elseif(UNIX)
  set(CMAKE_BUILD_PARALLEL_LEVEL $(nproc))
elseif(WIN32)
  set(CMAKE_BUILD_PARALLEL_LEVEL $ENV{NUMBER_OF_PROCESSORS})
else()
  set(CMAKE_BUILD_PARALLEL_LEVEL 4)
endif()

add_subdirectory(src/pal_core)
