[build-system]
requires = ["py-build-cmake", "nanobind==2.5.0", "mlx"]
build-backend = "py_build_cmake.build"

[project]
name = "proxy-attention-lab"
version = "0.0.1"
description = "Development and testing lab for PIE Paged Attention Kernels."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mlx",
    "nanobind==2.5.0",
    "py-build-cmake",
    "pytest",
    "pytest-xdist",
    "pre-commit",
    "black",
    "isort",
    "ruff",
    "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
packages = ["proxy_attention_lab"]

[tool.setuptools.package-data]
"proxy_attention_lab" = ["*.so", "*.dylib", "*.metallib"]

[tool.py-build-cmake.cmake]
source_path = "."
build_type = "RelWithDebInfo"
find_python = true
install_components = ["python_modules"]
build_args = [ "-j" ]

[tool.ruff]
target-version = "py312"
line-length = 120
unsafe-fixes = true
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    "S101", # ignore S101
    #### specific rules
]
extend-select = ["B", "I", "PGH", "RUF", "UP", "SLF", "F8"]

[tool.black]
line-length = 120
target-version = ["py312"]
