[build-system]
requires = ["py-build-cmake", "nanobind==2.5.0", "mlx"]
build-backend = "py_build_cmake.build"

[project]
name = "proxy-attention-lab"
version = "0.0.1"
description = "Development and testing lab for PIE Paged Attention Kernels."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mlx",
    "nanobind==2.5.0",
    "py-build-cmake",
    "pytest",
    "pytest-xdist",
    "pre-commit",
    "black",
    "isort",
    "ruff",
    "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
packages = ["proxy_attention_lab"]

[tool.setuptools.package-data]
"proxy_attention_lab" = ["*.so", "*.dylib", "*.metallib"]

[tool.py-build-cmake.cmake]
source_path = "."
build_type = "RelWithDebInfo"
find_python = true
install_components = ["python_modules"]
build_args = [ "-j" ]

[tool.ruff]
target-version = "py312"
line-length = 120
unsafe-fixes = true
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
extend-select = ["B", "I", "PGH", "RUF", "UP", "SLF", "F8"]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line-length = 120
